tests/NormalTests/paczka1/small_fuzzy/79396960.err
Error in line 1: OSqIdtm A420 72,57
Error in line 7: SWq7hA S42_ 8,5
Error in line 8: OSqIdtm A420 311,2
Error in line 3: A420 S115 26,6
Error in line 9: OSqIdtm S115 5,8
Error in line 10: aIzLynZuKZc S115 21,7
